Fix Update Contacts bug
